fix(ui-vision): info customer fields alignment (#11352)

--- a/packages/tickets/src/components/InfobarCustomerFields/InfobarCustomerFields.less
+++ b/packages/tickets/src/components/InfobarCustomerFields/InfobarCustomerFields.less
@@ -7,11 +7,20 @@
         width: 100%;
     }
 
+    .infoFieldRow {
+        padding: var(--spacing-xxxs) 0;
+    }
+
     .fieldValue {
         padding: 0 var(--spacing-xxxxs);
         text-decoration: underline;
         display: block;
         text-transform: none;
+    }
+
+    .infoFieldValue {
+        padding: 0 var(--spacing-xs);
+        text-decoration: none;
     }
 
     .isEditable {
